cover code generation from annotations
Signed-off-by: Yves Brissaud <gh@lgtd.io>